# Reto2/gestion-departamentos/docs/swagger.json
@@ -230,5 +230,18 @@
                 }
             }
         }
+    },
+    "security": [
+        {
+            "BearerToken": []
+        }
+    ],
+    "securityDefinitions": {
+        "BearerToken": {
+            "type": "apiKey",
+            "description": "Token JWT. Formato: 'Bearer {token}'",
+            "name": "Authorization",
+            "in": "header"
+        }
     }
 }
